--- a/hiera/hiera.yaml
+++ b/hiera/hiera.yaml
@@ -1,7 +1,7 @@
 ---
-:backends:
+:backends: 
   - yaml
 :yaml:
-  :datadir: /vagrant/hiera/
+  :datadir: /vagrant/hieradata/
 :hierarchy:
-  - common
+  - "%{osfamily}"
